--- a/src/main/java/com/mycompany/gestionturnoshospital/GestionEnfermeras.form
+++ b/src/main/java/com/mycompany/gestionturnoshospital/GestionEnfermeras.form
@@ -73,6 +73,9 @@
       <Properties>
         <Property name="text" type="java.lang.String" value="Agregar"/>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnAgregarEActionPerformed"/>
+      </Events>
     </Component>
     <Component class="javax.swing.JButton" name="btnEditarE">
       <Properties>
