--- a/src/main/java/com/mycompany/gestionturnoshospital/VentanaPrincipal.form
+++ b/src/main/java/com/mycompany/gestionturnoshospital/VentanaPrincipal.form
@@ -40,6 +40,10 @@
               </Group>
               <EmptySpace pref="118" max="32767" attributes="0"/>
           </Group>
+          <Group type="102" attributes="0">
+              <Component id="filtrarDisponibles" min="-2" max="-2" attributes="0"/>
+              <EmptySpace max="32767" attributes="0"/>
+          </Group>
       </Group>
     </DimensionLayout>
     <DimensionLayout dim="1">
@@ -57,7 +61,9 @@
               <Component id="btnCalendario" min="-2" max="-2" attributes="0"/>
               <EmptySpace type="unrelated" min="-2" max="-2" attributes="0"/>
               <Component id="btnConflictos" min="-2" max="-2" attributes="0"/>
-              <EmptySpace pref="62" max="32767" attributes="0"/>
+              <EmptySpace type="unrelated" max="-2" attributes="0"/>
+              <Component id="filtrarDisponibles" min="-2" max="-2" attributes="0"/>
+              <EmptySpace pref="28" max="32767" attributes="0"/>
               <Component id="btnSalir" min="-2" max="-2" attributes="0"/>
               <EmptySpace min="-2" max="-2" attributes="0"/>
           </Group>
@@ -119,6 +125,14 @@
       </Properties>
       <Events>
         <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnConflictosActionPerformed"/>
+      </Events>
+    </Component>
+    <Component class="javax.swing.JButton" name="filtrarDisponibles">
+      <Properties>
+        <Property name="text" type="java.lang.String" value="Enfermeras Disponibles"/>
+      </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="filtrarDisponiblesActionPerformed"/>
       </Events>
     </Component>
   </SubComponents>
