--- a/src/main/java/com/mycompany/gestionturnoshospital/DlgEliminarEnfermera.form
+++ b/src/main/java/com/mycompany/gestionturnoshospital/DlgEliminarEnfermera.form
@@ -64,9 +64,9 @@
                   <Component id="spIndice" alignment="3" min="-2" max="-2" attributes="0"/>
               </Group>
               <EmptySpace type="unrelated" max="-2" attributes="0"/>
-              <Group type="103" groupAlignment="3" attributes="0">
-                  <Component id="jLabel3" alignment="3" min="-2" max="-2" attributes="0"/>
+              <Group type="103" groupAlignment="0" attributes="0">
                   <Component id="lblResumen" alignment="1" min="-2" pref="111" max="-2" attributes="0"/>
+                  <Component id="jLabel3" min="-2" max="-2" attributes="0"/>
               </Group>
               <EmptySpace min="-2" pref="55" max="-2" attributes="0"/>
               <Group type="103" groupAlignment="3" attributes="0">
