--- a/src/main/java/com/mycompany/gestionturnoshospital/GestionEnfermeras.form
+++ b/src/main/java/com/mycompany/gestionturnoshospital/GestionEnfermeras.form
@@ -105,6 +105,9 @@
       <Properties>
         <Property name="text" type="java.lang.String" value="Gestionar Disponibilidad"/>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnGestionarDisponibilidadActionPerformed"/>
+      </Events>
     </Component>
     <Component class="javax.swing.JButton" name="btnVolver">
       <Properties>
